--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ main img {
 }
 
 p {
-    padding: 10px;
+    padding: 0px;
 }
 
 main {
@@ -32,9 +32,15 @@ main {
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0 0 0 .2);
+    border: 1px solid rgb(0 0 0 0.2);
     padding: 1rem;
     background-color: #eee;
     color: #333;
+    text-align: center;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
     text-align: center;
 }
